# edge

./: .env.example  .flake8  .gitignore  .pylintrc  API_USAGE.md  LICENSE  Makefile  README.md  build_executable.py  install.ps1  install.sh  mcp.json  package.json  pyproject.toml  requirements.txt  run_edge.py  setup.py  test_mcp_client.py  test_workspace_filter.py  test_workspace_handler.py  todoforai-edge-sidecar.spec
.github/actions/setup-env/: action.yml
.github/workflows/: build-executables.yml  deploy.yml  publish-npm.yml  publish-pypi.yml  release.yml
bridge/: MIGRATION.md  README.md
bridge/c/: Makefile  README.md  identity.c  identity.h  json.h  main.c  pty.c  pty.h  tls.c  tls.h  ws.c  ws.h
bridge/zig/: PROTOCOL.md  build.zig
bridge/zig/src/: identity.zig  main.zig  pty.zig  tls.zig  tls_openssl.zig
bun/: package.json  test_tool_urls.sh  tsconfig.json
bun/src/: agent-md.test.ts  agent-md.ts  api.ts  browser-extension-bridge.ts  browserStream.ts  config.ts  connection-context.ts  constants.ts  docx-handler.test.ts  docx-handler.ts  edge.ts  files.test.ts  files.ts  frontend-ws.ts  functions.ts  handlers.ts  index.ts  path-utils.test.ts  path-utils.ts  pdf-handler.ts  preview.ts  shell-pause-detector.test.ts  shell-pause-detector.ts  shell.test.ts  shell.ts  skills.test.ts  skills.ts  static-server.ts  tool-catalog.ts  tool-registry.test.ts  tool-registry.ts  types.ts  update-notifier.ts  workspace-tree.test.ts
bun/src/fuse/: index.ts  mount-manager.ts  operations.ts  path-mapping.ts  resource-client.ts
edge_frontend/: .gitignore  .prettierrc  components.json  index.html  package-lock.json  package.json  panda.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
edge_frontend/scripts/: download_logos.sh  sync-shared.sh
edge_frontend/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
edge_frontend/src-tauri/: .gitignore  CHANGELOG.md  Cargo.toml  tauri.conf.json
edge_frontend/src-tauri/desktop/: todoforai-edge.desktop
edge_frontend/src-tauri/icons/: icon.icns
edge_frontend/src-tauri/resources/python/: watch_sidecar.py  ws_sidecar.py
edge_frontend/src-tauri/scripts/: add_edge_text.py  remote_sign.ps1  sign_deb.sh  signing_server.py  update_icons.sh
edge_frontend/src-tauri/src/: lib.rs  main.rs
edge_frontend/src/components/: LogoImage.tsx
edge_frontend/src/config/: api-config.ts
edge_frontend/src/data/: mcpServersData.ts  mcpServersRegistry.ts
edge_frontend/src/external_shared/: REST_types.ts  attachmentUtils.ts  blocks.ts  channels.ts  constants.ts  context_schema.ts  enums.ts  fix.ts  protocol.ts
edge_frontend/src/hooks/: auth-hooks.ts  useClickOutside.ts  useMCPFilters.ts  useMCPRegistry.ts
edge_frontend/src/lib/: tauri-api.ts
edge_frontend/src/services/: auth-service.ts  edge-service.ts  python-service.ts
edge_frontend/src/shared/: REST_types_shared.ts
edge_node/: .env.example  README.md  package.json
edge_node/src/: arg-parser.js  auth.js  config.js  index.js  logger.js
examples/: simple_client.py
julia/: client.jl  client_arg_parser.jl  client_edge.jl  client_types.jl  client_websocket.jl  fingerprint.jl  handlers_edge.jl  io_wrapper.jl  main.jl  protocol.jl
julia/datasource/: api_client.jl  http_helpers.jl  interface.jl  server_datasource.jl  types.jl
neutralino-port/: README.md
neutralino-port/docs/: 01-architecture-overview.md  02-mcp-client-transport.md  03-websocket-communication.md  04-file-operations.md  05-shell-execution.md  06-file-sync.md  07-message-protocol.md  08-config-management.md
neutralino-port/src/: ConfigManager.ts  MessageRouter.ts  NeutralinoMCPTransport.ts  WebSocketClient.ts
plan/: device-auth.md  image-read-binary-transport.next.md  live-preview.NEXT.md  meta-ads-cli.md  shell-image-output.NEXT.md  shell-image-output.md
python/: .gitignore  README.md  pyproject.toml  requirements.txt
python/todo4ai_client/: __init__.py  apikey.py  cli.py  client.py  constants.py  handlers.py  messages.py  utils.py
scripts/: commiter.sh  copy_sidecar_to_resources.sh  gh_cli_log_viewer.sh  sign_exe.ps1  sign_file.ps1  sign_msi.ps1  sign_win.sh  signing_server.py  test_sidecar_setup.sh
snap/: snapcraft.yaml
test/: input.docx  simple_mcp_test.py  test_calendar_mcp.py  test_docx_handlers.py  test_download_attachment_flow.py  test_gitignore_comprehensive.py  test_gitignore_simple.py  test_mcp_client.py  test_mcp_install_server.py  test_mcp_verbose.py  test_minimal_gmail_call.py  test_project_lifecycle.py  test_puppeteer_focus.py  test_resolve_file_path.py  test_shell_edge_cases.py  test_shell_handler.py  test_signing_server.py  test_slack_mcp_client.py  test_suno_task_status.py  test_windows_gitignore.py  test_workspace_tree.py  test_xlsx_extraction.py
todo4ai_client/: apikey.py  client.py  handlers.py  messages.py
todoforai_edge/: __init__.py  apikey.py  app.py  arg_parser.py  cli.py  client.py  colors.py  config.py  constants.py  edge.py  edge_config.py  edge_functions.py  errors.py  extensions.py  file_sync.py  frontend_ws.py  handlers.py  mcp_client.py  mcp_collector.py  mcp_log_handler.py  messages.py  observable.py  path_utils.py  protocol_handler.py  setup_mcp_servers.py  shell_handler.py  tool_catalog.py  tool_registry.py  types.py  ui.py  utils.py  workspace_handler.py
todoforai_edge/constants/: __init__.py  constants.py  messages.py  workspace_handler.py
todoforai_edge/examples/: todo_management_example.py
todoforai_edge/fuse/: __init__.py  _compat.py  mount_manager.py  operations.py  path_mapping.py  resource_client.py
todoforai_edge/handlers/: docx_handler.py  file_sync.py  handlers.py  path_utils.py  shell_handler.py
todoforai_edge/mcp_servers/: __init__.py  cli.py  manager.py  mcp.json  predefined_servers.py
todoforai_edge/shell/: python_shell.py
todoforai_edge/todoforai_edge/: edge_config.py
todoforai_edge/ui/: __init__.py  auth_window.py  client_window.py  ui.py
todoforai_edge/utils/: search_by.py
zig-edge/: PROTOCOL.md  README.md  build.zig
zig-edge/src/: json.zig  main.zig  plain.zig  tls.zig  ws.zig
(+101 files in other folders)
