[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "todoforai-client"
version = "0.9.5"
description = "TODO for AI service client"
readme = "README.md"
authors = [
    {name = "TODO for AI Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dependencies = [
    "websockets>=10.4",
    "requests>=2.25.0",
]

[project.urls]
"Homepage" = "https://todofor.ai"
"Bug Tracker" = "https://github.com/todoforai/edge/issues"

[project.scripts]
todoforai-edge = "todoforai_edge.app:main"
