[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "todoforai-edge-cli"
version = "0.11.102"
description = "TODO for AI service console client"
readme = "README.md"
authors = [
    {name = "TODO for AI Team"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.7"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.urls]
"Homepage" = "https://todofor.ai"
"Bug Tracker" = "https://github.com/todoforai/edge/issues"

[project.scripts]
todoforai-edge-cli = "todoforai_edge.app:main"

[tool.setuptools.packages.find]
include = ["todoforai_edge*"]
