[package]
name = "todoforai-edge"
version = "0.10.31"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "todoforai_edge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
tauri-plugin-deep-link = "2"
