[package]
name = "todoforai-edge"
version = "0.11.62"
authors = ["you"]
edition = "2021"
license = "MIT"
repository = "https://github.com/todoforai/edge"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "todoforai-edge"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "todoforai_edge_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4", features = [] }

[dependencies]
tauri = { version = "2.7", features = ["devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2.5"
tauri-plugin-os = "2.3"
tauri-plugin-shell = "2.3"
tauri-plugin-deep-link = "2.4"
tauri-plugin-opener = "2.3"
tokio = { version = "1", features = ["time"] }
url = "2.5"
